--- a/src/components/filter/filter.css
+++ b/src/components/filter/filter.css
@@ -1,82 +1,3 @@
-/* TODO: refactor */
-
 .filter {
-  display: flex;
-  flex-flow: column nowrap;
-  gap: 3rem;
-
-  padding: 3rem;
-  border: 3px solid var(--col-text);
-}
-.filter__categories {
-  display: flex;
-  flex-flow: column nowrap;
-  gap: 3rem;
-}
-.filter__category {
-  display: flex;
-  flex-flow: column nowrap;
-  gap: 0.6rem;
-}
-.filter__category--active * {
-  font-weight: 600;
-}
-.filter__options {
-  display: flex;
-  flex-flow: row wrap;
-  gap: 0.6rem;
-}
-.filter__option {
-  flex: 1 1 10%;
-
-  white-space: nowrap;
-  font-size: 0.9rem;
-}
-.filter__option--active {
-  text-transform: uppercase;
-  outline: 2px solid var(--col-text);
-}
-.filter__option--active:hover {
-  outline-width: 0;
-}
-.filter__results {
-  display: flex;
-  flex-flow: column nowrap;
-  gap: 3rem;
-
-  padding: 3rem;
-  border: 3px solid var(--col-text);
-}
-.filter__list {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  gap: 3rem;
-
-  width: 100%;
-}
-.filter__item {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-between;
-  flex: 1 1;
-  flex-basis: 42%;
-
-  border: 1px solid var(--col-text);
-}
-
-@media screen and (max-width: 600px) {
-  .filter__item {
-    flex-basis: 100%;
-  }
-}
-@media screen and (min-width: 1300px) {
-  .filter__item {
-    flex-basis: 25%;
-  }
-}
-@media screen and (min-width: 1700px) {
-  .filter__item {
-    flex-basis: 20%;
-  }
+  padding: var(--space-lg);
 }
