--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,48 +1,13 @@
-/* TODO: refactor */
-
-#root {
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-
-  width: 100%;
-  min-height: 100vh;
-  border: 6px solid var(--col-text);
-}
-
-.app {
-  display: flex;
-  flex-flow: column nowrap;
-
-  margin: -6px;
-  border: 3px solid var(--col-text);
-}
-
 .app__header {
-  display: flex;
-  flex-flow: column nowrap;
-  gap: 1.2rem;
-
-  padding: 3rem;
-  border: 3px solid var(--col-text);
+  padding: var(--space-lg);
 }
 .app__description {
-  font-size: 1.1rem;
-  max-width: 1280px;
+  max-width: var(--app-width);
+
+  font-size: var(--space-md);
 }
 .app__main {
-  display: flex;
   flex-flow: column nowrap;
-}
-
-.box {
-  display: flex;
-  flex-flow: column nowrap;
-
-  width: 100%;
-  height: 100%;
-  border: 1px solid var(--col-text);
-  padding: 0.3rem;
 }
 
 @media screen and (min-width: 1000px) {
