--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,15 +1,9 @@
-/* TODO: refactor */
+@import './reset.css';
+@import './variables.css';
+@import './utils.css';
 
 :root {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-
-  --col-text: #213547;
-  --col-bg: #ffffff;
-
-  color: var(--col-text);
-  background-color: var(--col-bg);
+  color-scheme: light dark;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -17,64 +11,56 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+html {
+  color: light-dark(var(--col-text), var(--col-bg));
+  background-color: light-dark(var(--col-bg), var(--col-text));
 
-a {
-  border-bottom: 1px solid var(--col-text);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
 
-  font-weight: 600;
-  text-decoration: inherit;
-}
-a:hover {
-  opacity: 0.7;
+  scroll-behavior: smooth;
 }
 
 body {
-  display: flex;
-  place-items: center;
-
-  min-height: 100vh;
+  align-content: center;
 }
 
-h1 {
-  margin-bottom: 0.3rem;
+.heading-1 {
+  margin-bottom: var(--space-sm);
 
-  font-size: 3.2em;
+  font-size: var(--space-lg);
   font-weight: 900;
   line-height: 1;
   text-transform: uppercase;
 }
-h2 {
-  margin-bottom: 0.3rem;
+.heading-2 {
+  margin-bottom: var(--space-sm);
 
-  font-size: 2.4rem;
+  font-size: calc(var(--space-md) * 2);
   font-weight: 700;
   line-height: 1;
   text-transform: uppercase;
 }
-h3 {
-  margin-bottom: 0.3rem;
+.heading-3 {
+  margin-bottom: var(--space-sm);
 
-  font-size: 1.4rem;
+  font-size: var(--space-md);
   font-weight: 500;
   line-height: 1;
   letter-spacing: -1px;
 }
-p {
+.text {
   font-size: 1rem;
   font-weight: 400;
 }
-small {
+.small {
   opacity: 0.9;
 }
 
-button {
+.button {
   border: 1px solid var(--col-text);
-  padding: 0.6em 1.2em;
+  padding: var(--space-sm) var(--space-md);
 
   background-color: transparent;
   font-size: inherit;
@@ -82,12 +68,25 @@ button {
   font-family: inherit;
 
   cursor: pointer;
-  transition: border-color 0.25s;
 }
-button:hover {
+.button:hover {
   outline: 2px solid var(--col-text);
 }
-button:focus,
-button:focus-visible {
+.button:focus,
+.button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.box {
+  display: flex;
+  flex-flow: column nowrap;
+
+  width: 100%;
+  border: 1px solid var(--col-text);
+}
+.box--bold-border {
+  border-width: 3px;
+}
+.box--full-height {
+  height: 100%;
 }
