--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,1 +1,15 @@
-/* TODO */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+}
