--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -1,1 +1,24 @@
-/* TODO */
+.flexRow {
+  display: flex;
+  flex-direction: row;
+}
+.flexCol {
+  display: flex;
+  flex-direction: column;
+}
+.flexWrap {
+  flex-wrap: wrap;
+}
+.flexNoWrap {
+  flex-wrap: nowrap;
+}
+
+.gap-sm {
+  gap: var(--space-sm);
+}
+.gap-md {
+  gap: var(--space-md);
+}
+.gap-lg {
+  gap: var(--space-lg);
+}
