--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,1 +1,12 @@
-/* TODO */
+:root {
+  --app-width: 1280px;
+
+  --col-text: #213547;
+  --col-bg: #ffffff;
+
+  --space-sm: 0.6rem;
+  --space-md: 1.2rem;
+  --space-lg: 3rem;
+
+  --transition: ease-out 0.18s;
+}
