adjust padding of filter-results__item boxes

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -4,6 +4,7 @@
   --col-text: #213547;
   --col-bg: #ffffff;
 
+  --space-xs: 0.3rem;
   --space-sm: 0.6rem;
   --space-md: 1.2rem;
   --space-lg: 3rem;
