--- a/src/components/filter/FilterResults/filter-results.css
+++ b/src/components/filter/FilterResults/filter-results.css
@@ -1,3 +1,10 @@
+.heading-3--no-margin {
+  margin-bottom: unset;
+}
+.heading-3--normal-line-height {
+  line-height: 1.5;
+}
+
 .filter-results {
   padding: var(--space-lg);
 }
@@ -10,6 +17,15 @@
   justify-content: space-between;
   flex: 1 1;
   flex-basis: 42%;
+}
+
+.filter-results__heading,
+.filter-results__body,
+.filter-results__price {
+  padding: var(--space-xs);
+}
+.filter-results__price {
+  justify-content: flex-end;
 }
 
 @media screen and (max-width: 600px) {
